--- a/PlutoWallet/View/MainPage.xaml
+++ b/PlutoWallet/View/MainPage.xaml
@@ -27,7 +27,7 @@
 
             <Button
                 
-                Text="Increment"
+                Text="Test Connection"
                 Command="{Binding IncrementCounterCommand}"
                 />
 
