--- a/PlutoWallet/Resources/Styles/Styles.xaml
+++ b/PlutoWallet/Resources/Styles/Styles.xaml
@@ -4,6 +4,17 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
+    <!-- custom styles are here -->
+
+    <Style x:Key="mnemonicLabel" TargetType="Label">
+        <Setter Property="HorizontalOptions" Value="Center" />
+        <Setter Property="VerticalOptions" Value="Center" />
+        <Setter Property="FontSize" Value="18" />
+        <Setter Property="Margin" Value="8" />
+    </Style>
+
+    <!-- custom styles end here -->
+
     <Style TargetType="ActivityIndicator">
         <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
     </Style>
