--- a/PlutoWallet/View/MainPage.xaml
+++ b/PlutoWallet/View/MainPage.xaml
@@ -2,7 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodel="clr-namespace:PlutoWallet.ViewModel"
-             x:Class="PlutoWallet.MainPage">
+             x:Class="PlutoWallet.View.MainPage">
+
+    <Shell.BackButtonBehavior>
+        <BackButtonBehavior IsVisible="False" IsEnabled="False" />
+    </Shell.BackButtonBehavior>
+
     <ContentPage.BindingContext>
         <viewmodel:MainViewModel/>
     </ContentPage.BindingContext>
