--- a/PlutoWallet/Components/TransferView/TransferView.xaml
+++ b/PlutoWallet/Components/TransferView/TransferView.xaml
@@ -13,7 +13,8 @@
 
                 </AbsoluteLayout>
 
-                <Label 
+                <Label
+                    FontAttributes="Bold"
                     Text="Transfer"
                     HorizontalOptions="Center" />
 
