--- a/PlutoWallet/Components/ConnectionRequestView/ConnectionRequestView.xaml
+++ b/PlutoWallet/Components/ConnectionRequestView/ConnectionRequestView.xaml
@@ -1,16 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PlutoWallet.Components.ConnectionRequestView.ConnectionRequestView">
+             x:Class="PlutoWallet.Components.ConnectionRequestView.ConnectionRequestView"
+             AbsoluteLayout.LayoutBounds="0.5, 0.5, AutoSize, AutoSize"
+             AbsoluteLayout.LayoutFlags="PositionProportional"
+             IsVisible="{Binding IsVisible}">
     <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            CornerRadius="20">
         <AbsoluteLayout>
             <VerticalStackLayout>
                 <Image x:Name="icon"
+                       Source="{Binding Icon}"
                        WidthRequest="100"
                        HeightRequest="100" />
                 <Label 
                     x:Name="dAppNameLabel"
+                    Text="{Binding Name}"
                     VerticalOptions="Center"
                     HorizontalOptions="Center" />
                 <Label 
