Write numbers before mnemonics

--- a/PlutoWallet/View/MnemonicsPage.xaml
+++ b/PlutoWallet/View/MnemonicsPage.xaml
@@ -26,109 +26,109 @@
             <Label Grid.Column="0"
                    Grid.Row="0"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[0]}"
+                   Text="{Binding OrderedMnemonicsArray[0]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="1"
                    Grid.Row="0"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[1]}"
+                   Text="{Binding OrderedMnemonicsArray[1]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="0"
                    Grid.Row="1"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[2]}"
+                   Text="{Binding OrderedMnemonicsArray[2]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="1"
                    Grid.Row="1"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[3]}"
+                   Text="{Binding OrderedMnemonicsArray[3]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="0"
                    Grid.Row="2"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[4]}"
+                   Text="{Binding OrderedMnemonicsArray[4]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="1"
                    Grid.Row="2"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[5]}"
+                   Text="{Binding OrderedMnemonicsArray[5]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="0"
                    Grid.Row="3"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[6]}"
+                   Text="{Binding OrderedMnemonicsArray[6]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="1"
                    Grid.Row="3"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[7]}"
+                   Text="{Binding OrderedMnemonicsArray[7]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="0"
                    Grid.Row="4"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[8]}"
+                   Text="{Binding OrderedMnemonicsArray[8]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="1"
                    Grid.Row="4"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[9]}"
+                   Text="{Binding OrderedMnemonicsArray[9]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="0"
                    Grid.Row="5"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[10]}"
+                   Text="{Binding OrderedMnemonicsArray[10]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="1"
                    Grid.Row="5"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[11]}"
+                   Text="{Binding OrderedMnemonicsArray[11]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="0"
                    Grid.Row="6"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[12]}"
+                   Text="{Binding OrderedMnemonicsArray[12]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="1"
                    Grid.Row="6"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[13]}"
+                   Text="{Binding OrderedMnemonicsArray[13]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="0"
                    Grid.Row="7"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[14]}"
+                   Text="{Binding OrderedMnemonicsArray[14]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
             <Label Grid.Column="1"
                    Grid.Row="7"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[15]}"
+                   Text="{Binding OrderedMnemonicsArray[15]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
              <Label Grid.Column="0"
                    Grid.Row="8"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[16]}"
+                   Text="{Binding OrderedMnemonicsArray[16]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
              <Label Grid.Column="1"
                    Grid.Row="8"
                    Style="{StaticResource mnemonicLabel}"
-                   Text="{Binding MnemonicsArray[17]}"
+                   Text="{Binding OrderedMnemonicsArray[17]}"
                    HorizontalOptions="Center"
                    VerticalOptions="Center" />
         </Grid>
