--- a/PlutoWallet/Components/ConnectionRequestView/ConnectionRequestView.xaml
+++ b/PlutoWallet/Components/ConnectionRequestView/ConnectionRequestView.xaml
@@ -6,6 +6,7 @@
              AbsoluteLayout.LayoutFlags="PositionProportional"
              IsVisible="{Binding IsVisible}">
     <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
+           BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            CornerRadius="20">
         <AbsoluteLayout>
             <VerticalStackLayout>
