--- a/PlutoWallet/Components/NetworkSelect/NetworkSelectView.xaml
+++ b/PlutoWallet/Components/NetworkSelect/NetworkSelectView.xaml
@@ -2,14 +2,17 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:networkselect="clr-namespace:PlutoWallet.Components.NetworkSelect"
              x:Class="PlutoWallet.Components.NetworkSelect.NetworkSelectView" HeightRequest="50" WidthRequest="200">
-    <Frame CornerRadius="25"
-           Padding="0"
-        BackgroundColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
-         BorderColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}">
-        <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, 200, 50" >
-
-            <Picker
-                AbsoluteLayout.LayoutBounds="0.5, 0.5, 200, 30" AbsoluteLayout.LayoutFlags="PositionProportional"
+    <AbsoluteLayout AbsoluteLayout.LayoutBounds="0, 0, 200, 50" >
+        <Frame CornerRadius="25"
+               AbsoluteLayout.LayoutBounds="0, 0, 200, 50"
+               Padding="0"
+               BackgroundColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+               BorderColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}">
+        
+        </Frame>
+        <Picker
+                AbsoluteLayout.LayoutBounds="0.5, 0.5, 200, AutoSize" AbsoluteLayout.LayoutFlags="PositionProportional"
+                BackgroundColor="#00000000"
                 VerticalOptions="Center"
                 TextColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
                 HorizontalTextAlignment="Center"
@@ -19,9 +22,7 @@
                 ItemDisplayBinding="{Binding Name}"
                 ItemsSource="{Binding Networks}"
                 SelectedItem="{Binding SelectedEndpoint}" />
-        </AbsoluteLayout>
-        
-    </Frame>
+    </AbsoluteLayout>
     
 </ContentView>
 
