--- a/PlutoWallet/Components/TransactionRequest/TransactionRequestView.xaml
+++ b/PlutoWallet/Components/TransactionRequest/TransactionRequestView.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PlutoWallet.Components.MessagePopup.MessagePopupView"
+             x:Class="PlutoWallet.Components.TransactionRequest.TransactionRequestView"
+             IsVisible="{Binding IsVisible}"
              AbsoluteLayout.LayoutBounds="0.5, 0.5, AutoSize, AutoSize"
-             AbsoluteLayout.LayoutFlags="PositionProportional"
-             IsVisible="{Binding IsVisible}">
+             AbsoluteLayout.LayoutFlags="PositionProportional">
 
     <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
@@ -12,25 +12,36 @@
         <AbsoluteLayout>
 
             <VerticalStackLayout>
-                 <Label
+                <Label
                     FontAttributes="Bold"
-                    Text="{Binding Title}"
-                    x:Name="title"
+                    Text="TransactionRequest"
                     HorizontalOptions="Center" />
 
                 <Label
-                    x:Name="text"
-                    Text="{Binding Text}"
+                    Text="{Binding PalletIndex}"
                     HorizontalOptions="Center" />
 
-                <Button Text="Back"
-                        Clicked="OnBackClicked" />
+                <Label
+                    Text="{Binding CallIndex}"
+                    HorizontalOptions="Center" />
+
+                <Label
+                    Text="{Binding Parameters}"
+                    HorizontalOptions="Center" />
+
+                <Button Text="Sing and submit"
+                        HorizontalOptions="Center"
+                        Clicked="OnSubmitClicked" />
+
+                <Button Text="Reject" BackgroundColor="DarkRed"
+                        HorizontalOptions="Center"
+                        Clicked="OnRejectClicked" />
             </VerticalStackLayout>
 
             <Label AbsoluteLayout.LayoutBounds="0, 0, 40, 40"
                    Text="&lt;" FontAttributes="Bold">
                 <Label.GestureRecognizers>
-                    <TapGestureRecognizer Tapped="OnBackTapped" />
+                    <TapGestureRecognizer Tapped="OnBackClicked" />
 
                 </Label.GestureRecognizers>
 
