--- a/PlutoWallet/Components/TransferView/TransferView.xaml
+++ b/PlutoWallet/Components/TransferView/TransferView.xaml
@@ -1,22 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PlutoWallet.Components.TransferView.TransferView">
+             x:Class="PlutoWallet.Components.TransferView.TransferView"
+             IsVisible="{Binding IsVisible}"
+             AbsoluteLayout.LayoutBounds="0.5, 0.5, AutoSize, AutoSize"
+             AbsoluteLayout.LayoutFlags="PositionProportional">
     
     <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
+           BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            CornerRadius="20">
         <AbsoluteLayout>
 
             <VerticalStackLayout>
-                <AbsoluteLayout x:Name="qrLayout">
-
-
-                </AbsoluteLayout>
 
                 <Label
                     FontAttributes="Bold"
                     Text="Transfer"
+                    HeightRequest="30"
                     HorizontalOptions="Center" />
+
+                <AbsoluteLayout x:Name="qrLayout">
+
+                </AbsoluteLayout>
 
                 <HorizontalStackLayout FlowDirection="LeftToRight">
                     <Entry Placeholder="Address" Text="{Binding Address}" Margin="20" />
