--- a/PlutoWallet/Components/UniversalScannerView/UniversalScannerView.xaml
+++ b/PlutoWallet/Components/UniversalScannerView/UniversalScannerView.xaml
@@ -4,6 +4,7 @@
              xmlns:scanner="clr-namespace:PlutoWallet.Components.ScannerView"
              x:Class="PlutoWallet.Components.UniversalScannerView.UniversalScannerView">
    <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
+           BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            CornerRadius="20">
         <AbsoluteLayout>
 
@@ -11,7 +12,9 @@
 
                 <Label 
                     Text="Plutonication"
-                    HorizontalOptions="Center" />
+                    FontAttributes="Bold"
+                    HorizontalOptions="Center"
+                    HeightRequest="30"/>
 
                 <AbsoluteLayout x:Name="qrLayout">
 
