--- a/PlutoWallet/Components/AddressView/AddressView.xaml
+++ b/PlutoWallet/Components/AddressView/AddressView.xaml
@@ -1,30 +1,53 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="PlutoWallet.Components.AddressView.AddressView" HeightRequest="30">
+             x:Class="PlutoWallet.Components.AddressView.AddressView"
+             HeightRequest="30">
+
     <Frame BackgroundColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            BorderColor="{AppThemeBinding Light={StaticResource White}, Dark={StaticResource Black}}"
            CornerRadius="15"
            Padding="10, 0, 10, 0"
            Margin="0">
 
-        <HorizontalStackLayout HorizontalOptions="FillAndExpand">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
 
-            <Label 
-                x:Name="titleLabel"
-                VerticalOptions="Center" 
-                HorizontalOptions="StartAndExpand"
-                MinimumWidthRequest="100"/>
-           <Label 
-                x:Name="addressLabel"
-                VerticalOptions="Center" 
-                HorizontalOptions="Fill" />
-        </HorizontalStackLayout>
+            <Label x:Name="titleLabel"
+                   VerticalOptions="Center" 
+                   HorizontalOptions="StartAndExpand"
+                   MinimumWidthRequest="100"/>
+
+            <Label x:Name="addressLabel"
+                   VerticalOptions="Center" 
+                   HorizontalOptions="FillAndExpand"
+                   Grid.Column="1"/>
+
+            <Image WidthRequest="20"
+                   Margin="5, 0, 0, 0"
+                   VerticalOptions="Center" 
+                   HorizontalOptions="End"
+                   Grid.Column="2">
+                
+                <Image.Source>
+                    <FontImageSource Color="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
+                                     Glyph="&#xf029;"
+                                     FontFamily="FontAwesome"
+                                     Size="20" />
+                </Image.Source>
+            </Image>
+
+        </Grid>
+
         <ContentView.GestureRecognizers>
             <TapGestureRecognizer Tapped="OnTapped"/>
-
         </ContentView.GestureRecognizers>
+
     </Frame>
-    
+
 </ContentView>
 
